--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "point.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "makefilet": "c"
     }
 }
